Re-indent tabs to four spaces

--- a/lib/macroni/Common/CMakeLists.txt
+++ b/lib/macroni/Common/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(macroni_common
 )
 
 target_link_libraries(macroni_common
-  PRIVATE
-    pasta
+    PRIVATE
+        pasta::pasta
 )
 add_library(macroni::common ALIAS macroni_common)
