Add options for building with vendored submodules

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -6,11 +6,18 @@
 # the LICENSE file found in the root directory of this source tree.
 #
 
-set(PASTA_BOOTSTRAP_MACROS OFF)
-set(PASTA_BOOTSTRAP_TYPES OFF)
-set(PASTA_ENABLE_TESTING OFF)
-set(PASTA_ENABLE_INSTALL OFF)
-add_subdirectory(pasta)
+option(MACRONI_USE_VENDORED_GAP "Enable build with VAST's gap submodule" ON)
+option(MACRONI_USE_VENDORED_PASTA "Enable build with pasta submodule" ON)
+option(MACRONI_USE_VENDORED_VAST "Enable build with VAST submodule" ON)
 
+if (MACRONI_USE_VENDORED_PASTA)
+    set(PASTA_BOOTSTRAP_MACROS OFF)
+    set(PASTA_BOOTSTRAP_TYPES OFF)
+    set(PASTA_ENABLE_TESTING OFF)
+    set(PASTA_ENABLE_INSTALL OFF)
+    add_subdirectory(pasta)
+endif()
 
-add_subdirectory(vast)
+if (MACRONI_USE_VENDORED_VAST)
+    add_subdirectory(vast)
+endif()
