Change additional headers and remove linked libs
- Change additional headers to `${PROJECT_SOURCE_DIR}/include`
- Don't link to `macroni_settings` or `macroni`

--- a/lib/macroni/Dialect/Macroni/CMakeLists.txt
+++ b/lib/macroni/Dialect/Macroni/CMakeLists.txt
@@ -5,7 +5,7 @@ add_mlir_dialect_library(MLIRMacroni
     MacroniOps.cpp
 
     ADDITIONAL_HEADER_DIRS
-        ${PROJECT_SOURCE_DIR}/include/macroni
+        ${PROJECT_SOURCE_DIR}/include
 
     DEPENDS
         MLIRMacroniIncGen
@@ -20,6 +20,6 @@ add_mlir_dialect_library(MLIRMacroni
         MLIRControlFlowInterfaces
         MLIRDataLayoutInterfaces
         MLIRInferTypeOpInterface
-)
 
-target_link_libraries(MLIRMacroni PRIVATE macroni)
+        macroni_settings
+)
