--- a/lib/macroni/Dialect/Safety/CMakeLists.txt
+++ b/lib/macroni/Dialect/Safety/CMakeLists.txt
@@ -5,7 +5,7 @@ add_mlir_dialect_library(MLIRSafety
     SafetyOps.cpp
 
     ADDITIONAL_HEADER_DIRS
-        ${PROJECT_SOURCE_DIR}/include/macroni
+        ${PROJECT_SOURCE_DIR}/include
 
     DEPENDS
         MLIRSafetyIncGen
@@ -20,6 +20,6 @@ add_mlir_dialect_library(MLIRSafety
         MLIRControlFlowInterfaces
         MLIRDataLayoutInterfaces
         MLIRInferTypeOpInterface
-)
 
-target_link_libraries(MLIRSafety PRIVATE macroni)
+        macroni_settings
+)
