--- a/lib/macroni/Dialect/Kernel/CMakeLists.txt
+++ b/lib/macroni/Dialect/Kernel/CMakeLists.txt
@@ -2,14 +2,18 @@
 
 add_mlir_dialect_library(MLIRKernel
     KernelDialect.cpp
+    KernelInterfaces.cpp
     KernelOps.cpp
+    KernelAttributes.cpp
     KernelTypes.cpp
 
     ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include
 
     DEPENDS
+        MLIRKernelAttributesIncGen
         MLIRKernelIncGen
+        MLIRKernelInterfacesIncGen
 
     LINK_LIBS PUBLIC
         MLIRIR
