set macroni_VERSION
Set macroni version so that calling setup_package_version_variables()
works correctly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ include(project_utils)
 #
 # Setup package version
 #
+set(macroni_VERSION "${PROJECT_VERSION}")
 setup_package_version_variables(macroni)
 
 set(MACRONI_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
