--- a/include/macroni/Version.inc.in
+++ b/include/macroni/Version.inc.in
@@ -1,8 +1,8 @@
-#define MACRONI_VERSION @MACRONI_VERSION@
-#define MACRONI_VERSION_STRING "@MACRONI_VERSION@"
-#define MACRONI_VERSION_MAJOR @MACRONI_VERSION_MAJOR@
-#define MACRONI_VERSION_MAJOR_STRING "@MACRONI_VERSION_MAJOR@"
-#define MACRONI_VERSION_MINOR @MACRONI_VERSION_MINOR@
-#define MACRONI_VERSION_MINOR_STRING "@MACRONI_VERSION_MINOR@"
-#define MACRONI_VERSION_PATCHLEVEL @MACRONI_VERSION_PATCHLEVEL@
-#define MACRONI_VERSION_PATCHLEVEL_STRING "@MACRONI_VERSION_PATCHLEVEL@"
+#define MACRONI_VERSION @macroni_VERSION@
+#define MACRONI_VERSION_STRING "@macroni_VERSION@"
+#define MACRONI_VERSION_MAJOR @macroni_VERSION_MAJOR@
+#define MACRONI_VERSION_MAJOR_STRING "@macroni_VERSION_MAJOR@"
+#define MACRONI_VERSION_MINOR @macroni_VERSION_MINOR@
+#define MACRONI_VERSION_MINOR_STRING "@macroni_VERSION_MINOR@"
+#define MACRONI_VERSION_PATCH @macroni_VERSION_PATCH@
+#define MACRONI_VERSION_PATCH_STRING "@macroni_VERSION_PATCH@"
