Add tweak version number part

--- a/include/macroni/Version.inc.in
+++ b/include/macroni/Version.inc.in
@@ -6,3 +6,5 @@
 #define MACRONI_VERSION_MINOR_STRING "@macroni_VERSION_MINOR@"
 #define MACRONI_VERSION_PATCH @macroni_VERSION_PATCH@
 #define MACRONI_VERSION_PATCH_STRING "@macroni_VERSION_PATCH@"
+#define MACRONI_VERSION_TWEAK @macroni_VERSION_TWEAK@
+#define MACRONI_VERSION_TWEAK_STRING "@macroni_VERSION_TWEAK@"
