Configure macroni version info in a source file
Configure macroni version info in a source file and not a header file so
that any file references Macroni's version number, they won't need to be
recompiled, just relinked.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,6 +6,23 @@
 # the LICENSE file found in the root directory of this source tree.
 #
 
+################################################################################
+# Macroni version info
+################################################################################
+
+# Configure macroni's Version.cpp file. We configure a source file and not a
+# header so that if we change macroni's version number, we only have to relink
+# targets that reference the version number, not recompile them.
+configure_file(Version.cpp.in ${CMAKE_CURRENT_BINARY_DIR}/Version.cpp @ONLY)
+
+add_library(macroni_version STATIC ${CMAKE_CURRENT_BINARY_DIR}/Version.cpp)
+
+target_link_libraries(macroni_version PUBLIC macroni_settings)
+
+################################################################################
+# Macroni libraries
+################################################################################
+
 add_subdirectory(macroni)
 
 add_library(macroni_api INTERFACE)
@@ -18,3 +35,4 @@ target_link_libraries(macroni_api
 )
 
 add_library(macroni::api ALIAS macroni_api)
+
