--- a/lib/macroni/CMakeLists.txt
+++ b/lib/macroni/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
 add_subdirectory(Common)
+add_subdirectory(Config)
 add_subdirectory(Dialect)
 add_subdirectory(Conversion)
 add_subdirectory(Translation)
