--- a/lib/macroni/Config/Config.cpp.in
+++ b/lib/macroni/Config/Config.cpp.in
@@ -7,5 +7,6 @@ unsigned macroni_version_minor = @macroni_VERSION_MINOR@+0;
 unsigned macroni_version_patch = @macroni_VERSION_PATCH@+0;
 unsigned macroni_version_tweak = @macroni_VERSION_TWEAK@+0;
 
+const char *macroni_git_hash = "@macroni_GIT_HASH@";
 const char *bug_report_url = "@BUG_REPORT_URL@";
 } // namespace macroni
