Replace RULE_LAUNCH_COMPILE with launch variable
Tell CMake to use ccache as a compiler launcher using the
CMAKE_CXX_COMPILER_LAUNCHER variable instead of the RULE_LAUNCH_COMPILE
property to explicitly specify the launcher for CXX programs only (also
to avoid using RULE_LAUNCH_COMPILE since it's apparently meant for
internal use by ctest according to the CMake docs).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,9 @@ find_package(Clang REQUIRED CONFIG)
 #
 # CCACHE
 #
-find_program(CCACHE_PROGRAM ccache)
-if (CCACHE_PROGRAM)
-  set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
+find_program(CCACHE ccache)
+if (CCACHE)
+  set(CMAKE_CXX_COMPILER_LAUNCHER "${CCACHE}")
 endif()
 
 find_and_select_clang_compiler()
