--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -255,8 +255,11 @@ add_subdirectory(bin)
 #
 # macroni tests
 #
-enable_testing()
-add_subdirectory(test)
+option(MACRONI_ENABLE_TESTING "Enable Macroni's test suite" OFF)
+if (MACRONI_ENABLE_TESTING)
+        enable_testing()
+        add_subdirectory(test)
+endif()
 
 #
 # Install settings
